<resources>
    <string name="app_name">Health Calc</string>

    <string name="app_titulo">HeALTH\nCALC</string>
    <string name="login_activity_login">Login</string>
    <string name="login_activity_subtitulo">Faça login para continuar</string>
    <string name="login_activity_email">E-mail</string>
    <string name="login_activity_senha">Senha</string>
    <string name="login_activity_entrar">Entrar</string>
    <string name="login_activity_lembrar_me">Lembrar-me</string>
    <string name="login_activity_esqueci_a_senha">Esqueci a senha</string>
    <string name="login_activity_nao_tem_uma_conta">Não tem uma conta?</string>
    <string name="login_activity_criar_uma_conta_agora">Criar uma conta agora</string>

    <string name="login_titulo">Login</string>
    <string name="login_subtitulo">Faça login para continuar</string>
    <string name="login_et_email">E-mail</string>
    <string name="login_et_senha">Senha</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_lembrar_me">Lembrar-me</string>
    <string name="login_esqueci">Esqueci a senha</string>
    <string name="login_nao_tem_conta">Não tem uma conta?</string>
    <string name="login_criar_conta">Criar uma conta agora</string>
    <string name="trocar_foto">Trocar foto</string>
    <string name="subtitulo_dados_autenticacao">Dados para autenticação</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="subtitulo_dados_pessoais">Dados pessoais</string>
    <string name="nome">Nome</string>
    <string name="profissao">Profissão</string>
    <string name="altura">Altura</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="sexo">Sexo</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
</resources>